# engineai_rl_lab

./: .gitignore  README.md
src/pm01_deploy/: package.xml
src/pm01_deploy/config/: pm01.yaml  pm01_mujoco.yaml  pm01_mujoco_amp.yaml
src/pm01_deploy/config/param/: pm01_mujoco.yaml  pm01_mujoco_amp.yaml  pm01_mujoco_minic.yaml
src/pm01_deploy/config/param/backup/: test.yaml
src/pm01_deploy/config/policy/: 0207-2.pt  0207-4.pt  0207-6.pt  best.pt
src/pm01_deploy/config/policy/amp/: 1.onnx  1.pt  2.pt  3.pt  4.pt  5.pt  6.pt
src/pm01_deploy/script/: deploy_mujoco.py  deploy_mujoco_amp.py  deploy_mujoco_minic.py
src/pm01_deploy/script/backup/: deploy_mujoco copy 2.py  deploy_mujoco copy.py  deploy_mujoco.py  deploy_mujoco_amp copy.py  deploy_mujoco_amp.py  deploy_mujoco_amp_control.py  deploy_mujoco_minic 22.py  deploy_mujoco_minic copy.py  deploy_mujoco_multi_policy.py  deploy_mujoco_test.py  pm01_mujoco_multi_policy.yaml  pm_math.py  test.py
src/pm01_deploy/script/test/: gamepad_publisher.py  joy_test.py
src/pm01_deploy/script/tool/: check_gear.py  check_initial_angles.py  check_joints.py  check_mj_joints.py  check_sensors.py  tune_pid.py
src/pm01_deploy/src/: pm01_controller.cpp  pm01_controller.hpp
src/pm01_deploy/src/backup/: CMakeLists.txt  pm01_controller copy 2.cpp  pm01_controller copy 3.cpp  pm01_controller copy 4.cpp  pm01_controller copy.cpp  pm01_controller copy.hpp  pm01_controller.cpp  pm01_controller.hpp  pm01_controller修改过的.cpp  修改gaint.cpp
src/pm01_deploy/src/components/: message_handler.cc  message_handler.hpp
(+25 files in other folders)
